--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,52 @@
   </head>
   <body>
     <title>React App</title>
-    <div id="googleMap" style="width:75%;height:800px;"></div>
+    <div id="root"></div>
+    <div id="map" style="margin-left:105px;width:75%;height:500px;"></div>
     <script>
-    function myMap() {
-      var mapProp= {
-        center:new google.maps.LatLng(51.517338,-0.073279),
-        zoom:17,
-      };
-      var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+    var map;
+    var infowindow;
+
+    function initMap() {
+      var makers = {lat: 51.517338, lng: -0.073279};
+
+
+      map = new google.maps.Map(document.getElementById('map'), {
+        center: makers,
+        zoom: 15
+      });
+
+      infowindow = new google.maps.InfoWindow();
+      var service = new google.maps.places.PlacesService(map);
+      service.nearbySearch({
+        location: makers,
+        radius: 500,
+        type: ['bar']
+      }, callback);
+    }
+
+    function callback(results, status) {
+      if (status === google.maps.places.PlacesServiceStatus.OK) {
+        for (var i = 0; i < results.length; i++) {
+          createMarker(results[i]);
+        }
+      }
+    }
+
+    function createMarker(place) {
+      var placeLoc = place.geometry.location;
+      var marker = new google.maps.Marker({
+        map: map,
+        position: place.geometry.location
+      });
+
+      google.maps.event.addListener(marker, 'click', function() {
+        infowindow.setContent(place.name);
+        infowindow.open(map, this);
+      });
     }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=myMap"></script>
-
-
-    <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"></script>
 
   </body>
 </html>
