margin auto resizing for map, it stays in the centre of page

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <title>React App</title>
     <div id="root"></div>
-    <div id="map" style="margin-left:105px;width:75%;height:500px;"></div>
+    <div id="map" style="margin:auto;width:75%;height:500px;"></div>
     <script>
     var map;
     var infowindow;
