Map now diplaing.

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <body>
     <title>React App</title>
     <div id="root"></div>
-    <div id="map" style="margin:auto;width:75%;height:500px;"></div>
-    <script>
+    <!-- <div id="map" style="margin:auto;width:75%;height:500px;"></div> -->
+    <!-- <script>
     var map;
     var infowindow;
 
@@ -55,7 +55,7 @@
       });
     }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"></script> -->
 
   </body>
 </html>
