added hard-coded markers for the map

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       });
     }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"></script> -->
 
   </body>
 </html>
