--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
-  <body>
+
+  <body class="container-fluid" >
     <title>🍺Developers Pub Quiz</title>
-    <div id="root"></div>
+    <div class="container-fluid" id="root"></div>
   </body>
+
 </html>
