fixed emoji linting issues

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body class="container-fluid" >
-    <title>🍺Developers Pub Quiz</title>
+    <title><span role="img">🍺</span>Developers Pub Quiz</title>
     <div class="container-fluid" id="root"></div>
   </body>
 
