--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/clipart659286.png">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
@@ -11,7 +11,7 @@
   </head>
 
   <body class="container-fluid" >
-    <title><span role="img">🍺</span>Developers Pub Quiz</title>
+    <title>Developer Pub Quiz</title>
     <div class="container-fluid" id="root"></div>
   </body>
 
